# Mando-HL-Kelmove-Autonomous-Competition

./: README.md
Innovator-10/: REAMME.md
Innovator-10/Sensors/IMU/: README.md
Innovator-5/: README.md
Innovator-5/Control/: README.md
Innovator-5/Control/Waypoint_Control/: README.md
Innovator-5/Control/Waypoint_Control/waypoint_car_steering_control/: CMakeLists.txt  package.xml
Innovator-5/Control/Waypoint_Control/waypoint_car_steering_control/launch/: waypoint_control.launch
Innovator-5/Control/Waypoint_Control/waypoint_car_steering_control/src/: waypoint_car_steering_control_node.cpp
Innovator-5/Control/Waypoint_Control/waypoints_move/: package.xml
Innovator-5/Control/Waypoint_Control/waypoints_move/src/: waypoints_navigation_node.cpp
Innovator-5/Control/waypoints_move/: CMakeLists.txt
Innovator-5/Control/waypoints_move/launch/: move_plan.launch
Innovator-5/Control/waypoints_move/src/: waypoints_navigation_node.cpp
Innovator-5/PowerPack/: README.md
Innovator-5/PowerPack/Arduino/: Henes_code_check.ino  README.md
Innovator-5/Sensors/GPS/: README.md  gps_test1.py  test_gps.bag  waypoints_data(영남대학교).txt  waypoints_data.txt
Innovator-5/Sensors/GPS/geonav_transform/include/geonav_transform/: geonav_transform.h
Innovator-5/Sensors/GPS/geonav_transform/launch/: geonav_transform.launch
Innovator-5/Sensors/GPS/geonav_transform/src/: geonav_transform.cpp
Innovator-5/Sensors/GPS/geonav_transform/test/: pubodom.py
Innovator-5/Sensors/GPS/gps_datum_pub/: CMakeLists.txt  README.md  package.xml
Innovator-5/Sensors/GPS/gps_datum_pub/launch/: gps_datum.launch
Innovator-5/Sensors/GPS/gps_datum_pub/src/: gps_datum_pub.cpp
Innovator-5/Sensors/GPS/gps_msgs_package/: CMakeLists.txt  package.xml
Innovator-5/Sensors/GPS/gps_msgs_package/config/: gps_param.yaml  gps_param_absolute_type.yaml  initial_pos.yaml
Innovator-5/Sensors/GPS/gps_msgs_package/launch/: gps_coordinate_check.launch  gps_msgs_package.launch  gps_waypoint.launch
Innovator-5/Sensors/GPS/gps_msgs_package/src/: gps_msgs_package.cpp
Innovator-5/Sensors/GPS/image/: README.md
Innovator-5/Sensors/GPS/launch/: gps_pack.launch
Innovator-5/Sensors/GPS/waypoint_rviz_display/: CMakeLists.txt  package.xml
Innovator-5/Sensors/GPS/waypoint_rviz_display/launch/: waypoints_display.launch
Innovator-5/Sensors/GPS/waypoint_rviz_display/rviz/: waypoint_display.rviz
Innovator-5/Sensors/GPS/waypoint_rviz_display/scripts/: geoodom_path_node.py
Innovator-5/Sensors/GPS/waypoint_rviz_display/src/: waypoints_rviz_display.cpp
Innovator-5/Sensors/IMU/: README.md
Innovator-5/Sensors/IMU/handsfree_ros_imu_a9/: README.md  python2分支
Innovator-5/Sensors/IMU/handsfree_ros_imu_a9/demo/linux/: hfi_a9.py  hfi_a9_ui.py  hfi_b6.py  hfi_b6_ui.py  hfi_b9.py  hfi_b9_ui.py  hfi_d6.py
Innovator-5/Sensors/IMU/handsfree_ros_imu_a9/demo/windows/: hfi_a9.py  hfi_a9_ui.py  hfi_b6_ui.py  hfi_b9_ui.py
Innovator-5/Sensors/IMU/handsfree_ros_imu_a9/launch/: handsfree_imu_a9.launch  rviz_and_imu_a9.launch
Innovator-5/Sensors/IMU/handsfree_ros_imu_a9/scripts/: get_imu_rpy.py  hfi_a9_ros_new.py
Innovator-5/Sensors/IMU/handsfree_ros_imu_a9/tutorials/: Q_A.md  doc.md  raw_serial_data.md
Innovator-5/Sensors/IMU/handsfree_ros_imu_a9/tutorials/imu_model_file/: imu-a9.STEP  imu-b.STEP
Innovator-5/협약서류(예산)/: 별첨1.+신용평가_제출서류(K-RATING+서류제출) (1).hwp  붙임1.+2022년+산학연+Collabo+R&amp;D+(사업화R&amp;D)협약체결안내문.hwp  붙임3.+연구개발비조정양식.xlsx  붙임4.+협약+체크리스트.hwp  붙임5.+협약+관련+서식.hwp  특정제품업체신청사유서.hwp  협약과제등록신청서 양식.hwp
Pioneer-High School/: README.md
Pioneer-High School/Arduino/: README.md
Pioneer-Univ/: README.md
Pioneer./High School/: README.md
